# mysorf-base

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
conda-recipes/: base.yaml  dev.yaml
conf/: README.md  config.yaml
conf/artifacts/: default.yaml  gcs.yaml  s3.yaml
conf/logging/: file.yaml
conf/sweeps/: disabled.yaml
conf/tracking/: wandb.yaml
src/mysorf_base/: __init__.py  cli.py
src/mysorf_base/artifacts/: README.md  __init__.py
src/mysorf_base/artifacts/backends/: README.md  gcs.py  local.py  null.py  s3.py
src/mysorf_base/artifacts/core/: factory.py  interfaces.py  schema.py  validate.py
src/mysorf_base/checkpoints/: README.md  __init__.py  core.py
src/mysorf_base/config/: README.md
src/mysorf_base/config/core/: compose.py  registry.py  resolvers.py  schema.py  validate.py
src/mysorf_base/config/docs/: EXTENDING.md
src/mysorf_base/events/: README.md  __init__.py  core.py
src/mysorf_base/logging/: README.md
src/mysorf_base/logging/backends/: rich.py  structlog.py
src/mysorf_base/logging/core/: factory.py  interfaces.py
src/mysorf_base/profiling/: README.md  __init__.py
src/mysorf_base/profiling/backends/: basic.py  pandas.py
src/mysorf_base/profiling/core/: factory.py  interfaces.py  schema.py  timing.py
src/mysorf_base/runtime/: README.md
src/mysorf_base/runtime/core/: bootstrap.py  schema.py
src/mysorf_base/sweeps/: README.md
src/mysorf_base/sweeps/backends/: local.py  null.py  wandb.py
src/mysorf_base/sweeps/core/: factory.py  interfaces.py  schema.py  validate.py
src/mysorf_base/tracking/: README.md
src/mysorf_base/tracking/backends/: wandb.py
src/mysorf_base/utils/: __init__.py  hashing.py
tests/: test_artifacts.py  test_checkpoints.py  test_config_compose.py  test_events.py  test_logging_factory.py  test_profiling_factory.py  test_runtime_bootstrap.py  test_sweeps.py  test_tracking_factory.py  test_utils_hashing.py
